<resources>
    <string name="app_name">Teamer</string>

    <!-- welcome fragment -->
    <string name="f_welcome_title_tv">Teamer</string>
    <string name="f_welcome_sign_in_btn">Sign In</string>
    <string name="f_welcome_switch_user_btn">Switch User</string>
    <string name="f_welcome_sign_up_btn">Sign Up</string>

    <!-- sign in fragment -->
    <string name="f_sign_in_title_tv">Teamer Sign In</string>
    <string name="f_sign_in_email_tv">Email:</string>
    <string name="f_sign_in_password_tv">Password:</string>
    <string name="f_sign_in_btn">Sign In</string>

    <!-- sign up fragment -->
    <string name="f_sign_up_title_tv">Teamer Sign Up</string>
    <string name="f_sign_up_email_tv">Email:</string>
    <string name="f_sign_up_password_tv">Password:</string>
    <string name="f_sign_up_password_confirm_tv">Confirm Password:</string>
    <string name="f_sign_up_btn">Create Account</string>

    <!-- view profile fragment -->
    <string name="f_view_profile_username_tv">Username</string>
    <string name="f_view_profile_platform_title_tv">Gaming Platforms:</string>
    <string name="f_view_profile_platform_list_tv">Platform list</string>
    <string name="f_view_profile_game_title_tv">Games:</string>
    <string name="f_view_profile_game_list_tv">Game list</string>
    <string name="f_view_profile_edit_profile_btn">Edit Profile</string>
    <string name="f_view_profile_friendlist_btn">Friend list</string>
    <string name="f_view_profile_location_tv">None</string>

    <!-- create profile fragment -->
    <string name="f_create_profile_title_tv">Create Profile</string>
    <string name="f_create_profile_title_modify_tv">Modify Profile</string>
    <string name="f_create_profile_username_tv">Username:</string>
    <string name="f_create_profile_platform_tv">Gaming Platforms:</string>
    <string name="f_create_profile_game_title_tv">Add Games:</string>
    <string name="f_create_profile_done_btn">Done</string>
    <string name="f_create_profile_location_tv">Location</string>
    <string name="f_create_profile_location_cb">Show to public</string>
    <string name="f_create_profile_placeholder_tv"></string>
    <string name="f_create_profile_update_loc_cb">Update current location</string>

    <!-- friend list fragment -->
    <string name="f_friend_list_discover_btn">Discover</string>
    <string name="f_friend_list_profile_btn">Profile</string>
    <string name="f_friend_list_logout_btn">Logout</string>
    <string name="f_friend_list_friends_rb">Friend list</string>
    <string name="f_friend_list_requests_rb">Pending requests</string>
    <string name="recyleview_username_tv">placeholder</string>

    <!-- friend request response -->
    <string name="f_response_username_tv">Username</string>
    <string name="f_response_platform_tv">Gaming Platforms:</string>
    <string name="f_response_platform_list_tv">Platform list</string>
    <string name="f_response_game_tv">Games:</string>
    <string name="f_response_game_list_tv">Game list</string>
    <string name="f_response_accept_btn">Accept</string>
    <string name="f_response_decline_btn">Decline</string>

    <!-- friend profile fragment -->
    <string name="f_friend_profile_username_tv">Username</string>
    <string name="f_friend_profile_platform_tv">Gaming Platforms:</string>
    <string name="f_friend_profile_platform_list_tv">Platform list</string>
    <string name="f_friend_profile_game_tv">Games:</string>
    <string name="f_friend_profile_game_list_tv">Game list</string>
    <string name="f_friend_profile_chat_btn">Chat</string>
    <string name="f_friend_profile_remove_btn">Remove</string>
    <string name="f_friend_profile_loc_tv">None</string>

    <!-- supported platform -->
    <string name="gaming_platform_pc">PC</string>
    <string name="gaming_platform_ps4">PS4</string>
    <string name="gaming_platform_xboxone">Xbox One</string>
    <string name="gaming_platform_switch">Nintendo Switch</string>

    <string name="send_btn">Send</string>

    <string name="placeholder">""</string>

    <!-- supported games -->
    <string name="game_csgo">CS:GO</string>
    <string name="game_apex_legends">Apex Legends</string>
    <string name="game_rocket_league">Rocket League</string>
</resources>
