<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".view.FriendRequestResponseFragment">
    <TextView
            android:text="@string/f_response_username_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/f_response_username_tv"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp" android:textSize="40sp"
            android:layout_marginBottom="16dp" app:layout_constraintBottom_toTopOf="@+id/f_response_platform_tv"/>
    <TextView
            android:text="@string/f_response_platform_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/f_response_platform_tv" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/f_response_username_tv" android:textSize="24sp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/f_response_platform_list_tv"/>
    <TextView
            android:text="@string/f_response_platform_list_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/f_response_platform_list_tv" android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/f_response_platform_tv"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/f_response_game_tv"/>
    <TextView
            android:text="@string/f_response_game_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/f_response_game_tv" android:textSize="24sp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/f_response_platform_list_tv"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/f_response_game_list_tv"/>
    <TextView
            android:text="@string/f_response_game_list_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/f_response_game_list_tv" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/f_response_game_tv" android:textSize="20sp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/f_response_decline_btn"/>
    <Button
            android:text="@string/f_response_accept_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/f_response_accept_btn" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toStartOf="@+id/f_response_decline_btn" android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp" app:layout_constraintBottom_toBottomOf="parent"/>
    <Button
            android:text="@string/f_response_decline_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/f_response_decline_btn" android:layout_marginStart="16dp"
            app:layout_constraintStart_toEndOf="@+id/f_response_accept_btn" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>