<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".view.FriendProfileFragment"
>
    <TextView
            android:text="@string/f_friend_profile_username_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/f_friend_profile_username_tv" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp"
            android:layout_marginStart="8dp" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/f_friend_profile_platform_tv" android:textSize="40sp"/>
    <TextView
            android:text="@string/f_friend_profile_platform_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/f_friend_profile_platform_tv" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/f_friend_profile_username_tv" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/f_friend_profile_platform_list_tv" android:textSize="24sp"/>
    <TextView
            android:text="@string/f_friend_profile_platform_list_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/f_friend_profile_platform_list_tv" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/f_friend_profile_platform_tv" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/f_friend_profile_game_tv" android:textSize="20sp"/>
    <TextView
            android:text="@string/f_friend_profile_game_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/f_friend_profile_game_tv" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/f_friend_profile_platform_list_tv"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/f_friend_profile_game_list_tv" android:textSize="24sp"/>
    <TextView
            android:text="@string/f_friend_profile_game_list_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/f_friend_profile_game_list_tv" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/f_friend_profile_game_tv"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/f_friend_profile_remove_btn"
            android:textSize="20sp"/>
    <Button
            android:text="@string/f_friend_profile_chat_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/f_friend_profile_chat_btn" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp"
            app:layout_constraintEnd_toStartOf="@+id/f_friend_profile_remove_btn" android:layout_marginEnd="16dp"
    />
    <Button
            android:text="@string/f_friend_profile_remove_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/f_friend_profile_remove_btn"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toEndOf="@+id/f_friend_profile_chat_btn" android:layout_marginStart="16dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>