<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".view.FriendListFragment">
    <Button
            android:text="@string/f_friend_list_discover_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/f_friend_list_discover_btn" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintEnd_toStartOf="@+id/f_friend_list_profile_btn" android:layout_marginEnd="16dp"
    />
    <Button
            android:text="@string/f_friend_list_profile_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/f_friend_list_profile_btn"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp" app:layout_constraintStart_toEndOf="@+id/f_friend_list_discover_btn"
            app:layout_constraintEnd_toStartOf="@+id/f_friend_list_logout_btn" android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/f_friend_list_type_rg"/>
    <Button
            android:text="@string/f_friend_list_logout_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/f_friend_list_logout_btn" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp" android:layout_marginStart="16dp"
            app:layout_constraintStart_toEndOf="@+id/f_friend_list_profile_btn"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
    <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/f_friend_list_profile_btn"
            android:id="@+id/f_friend_list_type_rg" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/list_recycler_view">
        <RadioButton
                android:text="@string/f_friend_list_friends_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/f_friend_list_friends_rb"
                android:layout_weight="1"/>
        <RadioButton
                android:text="@string/f_friend_list_requests_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/f_friend_list_requests_rb"/>
    </RadioGroup>
    <androidx.recyclerview.widget.RecyclerView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"
            android:id="@+id/list_recycler_view" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/f_friend_list_type_rg"/>
</androidx.constraintlayout.widget.ConstraintLayout>