<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".WelcomeFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                android:text="@string/f_welcome_title_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/f_welcome_title_tv"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                android:layout_marginBottom="32dp" app:layout_constraintBottom_toTopOf="@+id/f_welcome_sign_in_btn"
                android:textStyle="bold" android:textAlignment="center" android:textSize="36sp"/>
        <Button
                android:text="@string/f_welcome_sign_in_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/f_welcome_sign_in_btn" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/f_welcome_title_tv" android:layout_marginBottom="2dp"
                app:layout_constraintBottom_toTopOf="@+id/f_welcome_sign_up_btn"/>
        <Button
                android:text="@string/f_welcome_sign_up_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/f_welcome_sign_up_btn" android:layout_marginTop="2dp"
                app:layout_constraintTop_toBottomOf="@+id/f_welcome_sign_in_btn"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>