<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".FriendRequestResponseActivity" android:id="@+id/constraintLayout">

    <TextView
            android:text="@string/f_view_profile_username_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/f_view_profile_username_tv"
            android:textSize="40sp"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/f_view_profile_platform_title_tv"/>
    <TextView
            android:text="@string/f_view_profile_platform_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/f_view_profile_platform_title_tv"
            android:textSize="24sp"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/f_view_profile_username_tv" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/f_view_profile_platform_list_tv"/>
    <TextView
            android:text="@string/f_view_profile_platform_list_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/f_view_profile_platform_list_tv"
            android:textSize="20sp"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/f_view_profile_platform_title_tv"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/f_view_profile_game_title_tv"/>
    <TextView
            android:text="@string/f_view_profile_game_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/f_view_profile_game_title_tv"
            android:textSize="24sp"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/f_view_profile_platform_list_tv"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/f_view_profile_game_list_tv"/>
    <TextView
            android:text="@string/f_view_profile_game_list_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/f_view_profile_game_list_tv"
            android:textSize="20sp"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/f_view_profile_game_title_tv"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/a_friend_request_decline_btn"/>
    <Button
            android:text="@string/a_friend_request_accept_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/a_friend_request_accept_btn" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@+id/a_friend_request_decline_btn"
            android:layout_marginEnd="16dp"/>
    <Button
            android:text="@string/a_friend_request_decline_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/a_friend_request_decline_btn" android:layout_marginStart="16dp"
            app:layout_constraintStart_toEndOf="@+id/a_friend_request_accept_btn"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
    />
</androidx.constraintlayout.widget.ConstraintLayout>